# stellar-game-of-life

./: .env.example  .env.production  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: deploy.yml
contracts/game-of-life/: Cargo.toml
contracts/game-of-life/src/: lib.rs
contracts/game-of-life/test_snapshots/test/: test_birth.1.json  test_birth_inherits_neighbor_type.1.json  test_blinker_oscillator.1.json  test_block_still_life.1.json  test_dominant_type_clear_winner.1.json  test_empty_board.1.json  test_mixed_types_block_survives.1.json  test_overcrowding.1.json  test_same_type_blinker.1.json  test_single_cell_dies.1.json
src/: App.jsx  index.css
